--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="content">
-    <div class="action-buttons">
-      <button (click)="goToTranslate()">{{ 'button.setting' | translate }}</button>
-      <button (click)="goToOcr()">{{ 'button.ocr' | translate }}</button>
-    </div>
+    SSOデモ
+    <button *ngIf="isLoggedIn && !isLoginPage" class="logout-btn" (click)="logout()">ログアウト</button>
   </div>
   <router-outlet></router-outlet>
 </div>
+
+<app-network-overlay></app-network-overlay>
 
